# TrustDNA-AI

./: .env.example  .gitignore  LICENSE  README.md  eslint.config.mjs  package-lock.json  package.json
backend/: .env.example  README.md  openapi.json  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  contracts.py  stubs.py
backend/app/api/: router.py
backend/app/artifact/: __init__.py  contracts.py  models.py  pipeline.py  processors.py  repository.py  service.py
backend/app/certificate/: __init__.py  models.py  repository.py  routes.py  schemas.py  service.py
backend/app/core/: config.py  dependencies.py  errors.py  logging.py  openapi.py  request_id.py
backend/app/domain/: __init__.py  enums.py
backend/app/identity/: __init__.py  models.py  repository.py  routes.py  schemas.py  service.py  versioning.py
backend/app/investigation/: __init__.py  lifecycle.py  models.py  repository.py  risk.py  routes.py  schemas.py  sentinel.py  service.py
backend/app/shared/: __init__.py  ids.py
backend/scripts/: export_openapi.py
backend/tests/: conftest.py  test_health.py  test_identity_and_investigation.py
docs/: gmail-integration.md  identity-intelligence.md  identity-twin.md  living-identity-genome.md
src/app/: error.tsx  globals.css  layout.tsx  page.tsx
src/components/: auth-provider.tsx  auth-screen.tsx  brand-mark.tsx  case-file.tsx  evidence-report.tsx  identity-genome-hologram.tsx  investigation-console.tsx  judge-mode.tsx  landing-page.tsx  onboarding-wizard.tsx  platform-landing.tsx  platform-shell.tsx  (+5 more)
(+140 files in other folders)
